--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ p {
 	padding: 0 20px;
 }
 
-#footer-nav-list {
+#footer-nav-list ul {
 	display: none;
 }
 
@@ -53,7 +53,7 @@ p {
 HEADER
 ==================================== */
 
-.nav-list {
+#header-nav-list ul {
 	width: 80%;
 	display: block;
 	list-style: none;
@@ -61,7 +61,7 @@ HEADER
 	margin: 0 auto;
 }
 
-.nav-list li {
+#header-nav-list ul li {
 	width: 100%;
 	display: block;
 	margin: 5px auto;
@@ -123,7 +123,7 @@ footer {
 
 @media (min-width: 768px) {
 
-	.nav-list {
+	#header-nav-list ul {
 		width: 80%;
 		display: block;
 		list-style: none;
@@ -131,7 +131,7 @@ footer {
 		text-align: center;
 	}
 
-	.nav-list li {
+	#header-nav-list ul li {
 		width: 100%;
 		display: inline;
 		margin: 0 15px;
@@ -168,7 +168,7 @@ footer {
 		display: none;
 	}
 
-	#footer-nav-list {
+	#footer-nav-list ul {
 		display: inline;
 		width: 60%;
 		float: right;
@@ -177,7 +177,7 @@ footer {
 		padding-right: 15px;
 	}
 
-	#footer-nav-list li {
+	#footer-nav-list ul li {
 		width: 100%;
 		display: inline;
 		padding: 10px;
@@ -185,12 +185,6 @@ footer {
 	    opacity: .8;
 	    border-radius: 4px;
 	    border: 1px solid grey;
-	}
-
-	.clearfix::after {
-		content: "";
-		display: table;
-		clear: both;
 	}
 }
 
@@ -201,7 +195,11 @@ footer {
 		display: inline;
 	}
 
-	.main-header .nav-list {
+	#header-nav-list {
+		display: inline;
+	}
+
+	#header-nav-list ul {
 		display: inline;
 		width: 60%;
 		float: right;
@@ -211,7 +209,7 @@ footer {
 		margin-top: 20px;
 	}
 
-	.main-header .nav-list li {
+	#header-nav-list ul li {
 		width: 100%;
 		display: inline;
 		padding: 10px;
@@ -223,3 +221,9 @@ footer {
 		max-width: 33%;
 	}
 }
+
+.clearfix::after {
+		content: "";
+		display: table;
+		clear: both;
+	}
